work in progress

--- a/final_report.tex
+++ b/final_report.tex
@@ -48,7 +48,7 @@ basicstyle=\fontsize{11}{13}\selectfont\ttfamily
 %\renewcommand{\qedsymbol}{\filledbox}
 
 \title{CS325 Final Project Report}%replace X with the appropriate number
-\author{Nathan, Newton, Ziwei} %replace with your name
+\author{Nathan Perkins, Eric Newton, Ziwei Wu} %replace with your name
  %if necessary, replace with your course title
 \maketitle
 \section*{Introduction}
